--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=WalletApp
 spring.datasource.password=122024Clux!
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_db
+spring.datasource.url=jdbc:mysql://localhost:3306/wallet_db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
